style.css
/* ... */
#full-div1 h1 {
    font-size: 14vw;
    color: #000;
    margin-bottom: 2vh;
    line-height: 7vh;
    text-transform: uppercase;
}

#full-div1 a {
    text-decoration: none;
}

@media (max-width:600px) {

    #page1 {
        min-height: 100vh;
        width: 100vw;
        padding: 0 0vw;
    }

    nav {
        padding: 4vw 5vw;
        background-color: #EFEAE3;
        /* padding: 0 5vw; */
    }

    nav img {
        transition: all ease 0.2s;
        height: 9vh;
    }

    #nav-part2 {
        display: none;
    }

    nav h3 {
        display: block;
        padding: 3vw 5vw;
        border: 1px solid #ababab;
        border-radius: 50px;
        font-size: 4vw;
        font-weight: 200;
        color: #000;
    }

    nav a {
        text-decoration: none;
    }

    /* .menu-link {
        text-decoration: none;
    }

    .menu-text {
        text-transform: uppercase;
        color: #000;
        z-index: 1000;
    } */

    #center {
        height: 62vh;
        width: 100%;
        /* background-color: orange; */
        display: flex;
        align-items: flex-end;
        justify-content: space-between;
        border-bottom: 1px solid #0000003c;
        padding: 7vw 5vw;
        padding-bottom: 10vw;
        flex-direction: column-reverse;
        position: relative;
        z-index: 9;
    }

    #left h3 {
        width: 80%;
        font-size: 5.5vw;
        line-height: 6vw;
    }

    #center h1 {
        font-size: 17vw;
        text-align: right;
        line-height: 15vw;
    }

    #hero-shape {
        width: 70vw;
        height: 80vw;
    }

    #hero-2{
        height: 60vw;
        width: 60vw;
    }

    #hero-3{
        height: 60vw;
        width: 60vw;
    }

    #hero-4{
        height: 60vw;
        width: 60vw;
    }

    #hero-5{
        height: 60vw;
        width: 60vw;
    }

    #page1 video {
        position: relative;
        border-radius: 15px;
        margin-top: 4vw;
        height: 70vh;
        object-fit: cover;
        object-position: center;
        width: 92%;
        margin-left: 4%;
    }

    #page2 {
        min-height: 100vh;
        width: 100%;
        background-color: #EFEAE3;
        padding: 8vw 0;
        position: relative;
    }

    #moving-text {
        overflow-x: auto;
        white-space: nowrap;
    }

    #moving-text::-webkit-scrollbar {
        display: none;
    }

    .con {
        white-space: nowrap;
        display: inline-block;
        animation-name: move;
        animation-duration: 10s;
        animation-timing-function: linear;
        animation-iteration-count: infinite;
    }

    #moving-text h1 {
        font-size: 15vw;
        /* background-color: lightblue; */
        display: inline-block;
    }

    #gola {
        height: 25px;
        width: 25px;
        border-radius: 50%;
        display: inline-block;
        background-color: #FE320A;
        margin: 2vw 2vw;
    }

    #page2-bottom {
        height: 90vh;
        width: 100%;
        /* background-color: aliceblue; */
        padding: 10vw 4vw;
        display: flex;
        align-items: flex-start;
        justify-content: space-between;
        position: relative;
        flex-direction: column;
        z-index: 9;
    }

    #page2-bottom h1 {
        font-size: 8.2vw;
        width: 100%;
        line-height: 9vw;
    }

    #bottom-part2 {
        width: 70%;
        /* background-color: aqua; */
    }

    #bottom-part2 img {
        width: 100%;
        border-radius: 10px;
    }

    #bottom-part2 p {
        font-weight: 200;
        margin-top: 2vw;
        font-size: 3vw;
    }

    #page2 #gooey {
        height: 62vw;
        width: 62vw;
        position: absolute;
        border-radius: 50%;
        background: linear-gradient(to top right, #ff2d03, #ff5c0b);
        /* background: linear-gradient(to top right,red,blue); */


        top: 58%;
        left: 25%;
        filter: blur(20px);
        animation-name: gooey;
        animation-duration: 6s;
        animation-iteration-count: infinite;
        animation-direction: alternate;
        animation-timing-function: ease-in-out;

    }

    .swiper-slide {
        max-width: 50vw;
        height: max-content;
        border-left: 1px solid #aeadad;
        padding: 0 2vw;
        color: rgba(0, 0, 0, 0.541);
        left: 0%;
    }
    
    #elem-container {
        display: none;
    }

    #elem-container-mobile {
        display: flex;
        flex-direction: column;
        padding: 0 5vw;
    }

    .row {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .tile {
        /* border: 1px solid black; */
        height: 40vh;
        width: 48%;
    }

    .tile img {
        height: 75%;
        width: 100%;
        object-fit: cover;
        vertical-align: middle;
        border-radius: 5%;
    }

    .tile video {
        height: 75%;
        width: 100%;
        object-fit: cover;
        vertical-align: middle;
        border-radius: 5%;
    }

    .name {
        color: rgba(0, 0, 0, 0.486);
        font-weight: 100;
    }

    #elem-container-mobile h2 {
        font-size: 5vw;
    }
    #elem-container-mobile h4 {
        font-size: 3vw;
    }



    
    #footer h3{
        font-size: 5vw;
    }    

    #footer-upper-right h3 {
        font-size: 3.5vw;
    }

    #footer h2 {
        font-size: 3vw;
    }
}

#loader{
    height: 100%;
    width: 100%;
    background-color: #000;
    position: fixed;
    z-index: 999;
    top: 0;
    transition: all ease 0.7s;
    display: flex;
    align-items: center;
    justify-content: center;
}

#loader h1{
    font-size: 4vw;
    color: transparent;
    background: linear-gradient(to right,orange,orangered);
    -webkit-background-clip: text;
    position: absolute;
    opacity: 0;
    animation-name: load;
    animation-duration: 1s;
    animation-delay: 1s;
    animation-timing-function: linear;
}
/* ... */

